arch/k8s/pinger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pinger-deployment
    labels:
      app: pinger
    namespace: microservices
spec:
    replicas: 2
    selector:
       matchLabels:
          app: pinger
    template:
       metadata:
          labels:
             app: pinger
       spec:
          containers:
          - name: pinger
            image: vladimirkostin/pinger:latest
            command: ["/opt/pinger/pinger-app"]
            ports:
              - name: web
                containerPort: 8000
