arch/k8s/pinger/postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-pinger-statefulset
  namespace: microservices
spec:
  serviceName: postgres-pinger
  replicas: 1
  selector:
    matchLabels:
      app: postgres-pinger
  template:
    metadata:
      labels:
        app: postgres-pinger
    spec:
      containers:
      - name: postgres-pinger
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgredb
        volumeMounts:
        - name: postgredb-pinger
          mountPath: /var/lib/postgresql/data
          subPath: postgres-pinger
  volumeClaimTemplates:
  - metadata:
      name: postgredb-pinger
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 300Mi

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-pinger
  labels:
    app: postgres-pinger
  namespace: microservices
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres-pinger
