arch/k8s/pinger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinger-service
  namespace: microservices
  labels:
    k8s-app: kube-state-metrics
spec:
  selector:
    app: pinger
  ports:
    - protocol: TCP
      port: 8000
      name: pinger-web
      targetPort: pinger-web-dep
    - protocol: TCP
      port: 9070
      name: http-metrics
      targetPort: metrics
  type: ClusterIP
